create basix express structure

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "github": "^0.2.1",
     "level": "^0.18.0",
     "handlebars": "^2.0.0-alpha.4",
-    "express": "^4.6.1"
+    "express": "^4.6.1",
+    "consolidate": "^0.10.0"
   },
   "devDependencies": {},
   "scripts": {
