--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "debug": "~0.7.4",
     "jade": "~1.3.0",
     "marked": "*",
-    "express-params": "0.0.3"
+    "express-params": "0.0.3",
+    "leveldown": "^0.10.2"
   }
 }
