--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jade": "~1.3.0",
     "marked": "*",
     "express-params": "0.0.3",
-    "leveldown": "^0.10.2"
+    "leveldown": "^0.10.2",
+    "downsize": "0.0.6"
   }
 }
