--- a/package.json
+++ b/package.json
@@ -6,18 +6,19 @@
     "start": "sudo PORT=80 node ./bin/www"
   },
   "dependencies": {
-    "express": "~4.2.0",
-    "github": "*",
-    "level": "*",
-    "static-favicon": "~1.0.0",
-    "morgan": "~1.0.0",
-    "cookie-parser": "~1.0.1",
     "body-parser": "~1.0.0",
+    "cookie-parser": "~1.0.1",
     "debug": "~0.7.4",
-    "jade": "~1.3.0",
-    "marked": "*",
+    "downsize": "0.0.6",
+    "express": "~4.2.0",
     "express-params": "0.0.3",
+    "github": "*",
+    "jade": "~1.3.0",
+    "level": "*",
     "leveldown": "^0.10.2",
-    "downsize": "0.0.6"
+    "marked": "*",
+    "morgan": "~1.0.0",
+    "sitemap": "^0.7.3",
+    "static-favicon": "~1.0.0"
   }
 }
